--- a/TodoList_App/Base.lproj/Main.storyboard
+++ b/TodoList_App/Base.lproj/Main.storyboard
@@ -1,24 +1,187 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bOa-2M-3Xr">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="pJ0-1A-tEE">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="GV0-ek-5vJ" customClass="TV_ViewController" customModule="TodoList_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="YRY-Y6-YuD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="ID_Cell" editingAccessoryType="detailDisclosureButton" rowHeight="100" id="fOo-Tz-SLw" customClass="AddItem_Cell" customModule="TodoList_App" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="320" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fOo-Tz-SLw" id="bXZ-yX-2MJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="283.5" height="100"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1a-tj-x4K">
+                                            <rect key="frame" x="5" y="5" width="72" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SubTitel" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NU-Df-cHC">
+                                            <rect key="frame" x="5" y="46" width="268.5" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="COA-MP-0qX"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQB-eX-66z">
+                                            <rect key="frame" x="242.5" y="5" width="36" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="pQB-eX-66z" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="r1a-tj-x4K" secondAttribute="trailing" constant="10" id="1LU-4K-bFh"/>
+                                        <constraint firstItem="r1a-tj-x4K" firstAttribute="top" secondItem="bXZ-yX-2MJ" secondAttribute="top" constant="5" id="2p9-7k-3eu"/>
+                                        <constraint firstItem="pQB-eX-66z" firstAttribute="centerY" secondItem="r1a-tj-x4K" secondAttribute="centerY" id="3hR-Yh-fgl"/>
+                                        <constraint firstAttribute="trailing" secondItem="8NU-Df-cHC" secondAttribute="trailing" constant="10" id="GuN-VN-qF1"/>
+                                        <constraint firstItem="r1a-tj-x4K" firstAttribute="width" secondItem="bXZ-yX-2MJ" secondAttribute="width" multiplier="0.253968" id="XNr-aP-5S4"/>
+                                        <constraint firstItem="r1a-tj-x4K" firstAttribute="leading" secondItem="bXZ-yX-2MJ" secondAttribute="leading" constant="5" id="Yfb-jA-bkR"/>
+                                        <constraint firstItem="8NU-Df-cHC" firstAttribute="leading" secondItem="r1a-tj-x4K" secondAttribute="leading" id="ebJ-2v-5Oc"/>
+                                        <constraint firstItem="8NU-Df-cHC" firstAttribute="top" secondItem="r1a-tj-x4K" secondAttribute="bottom" constant="20" id="gqK-64-B3S"/>
+                                        <constraint firstAttribute="trailing" secondItem="pQB-eX-66z" secondAttribute="trailing" constant="5" id="ome-HA-plt"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="date_cell" destination="pQB-eX-66z" id="b2v-aD-nOP"/>
+                                    <outlet property="not_cell" destination="8NU-Df-cHC" id="RRe-Ce-WGe"/>
+                                    <outlet property="titel_cell" destination="r1a-tj-x4K" id="gmv-4J-228"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="GV0-ek-5vJ" id="xAa-xL-1HS"/>
+                            <outlet property="delegate" destination="GV0-ek-5vJ" id="VrB-5a-x2Q"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="ncn-M1-fob">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="pml-ck-Yqt">
+                            <connections>
+                                <segue destination="ceu-ZA-k2Z" kind="presentation" identifier="AddItem_Segue" id="caF-It-vzk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xLa-ws-25p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1170" y="83.450704225352112"/>
+        </scene>
+        <!--Add Item-->
+        <scene sceneID="ag9-4U-tVa">
+            <objects>
+                <viewController id="ceu-ZA-k2Z" customClass="AddItem" customModule="TodoList_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Af-Ga-2IB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please Enter you Titel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jNd-QP-mIV">
+                                <rect key="frame" x="5" y="5" width="310" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="mAu-Gf-TYq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z4A-yx-lxH">
+                                <rect key="frame" x="20" y="488" width="280" height="50"/>
+                                <color key="backgroundColor" red="0.15903741900000001" green="0.38197995109999999" blue="0.73735530630000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="7wD-Yw-xDz"/>
+                                </constraints>
+                                <color key="tintColor" red="0.91372549530000002" green="0.90196073060000004" blue="0.99215686319999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Add Item">
+                                            <attributes>
+                                                <font key="NSFont" size="29" name="Helvetica-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="addItem_Action:" destination="ceu-ZA-k2Z" eventType="touchUpInside" id="shB-6L-wne"/>
+                                </connections>
+                            </button>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="twD-of-hQT">
+                                <rect key="frame" x="0.0" y="214" width="320" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="0wz-ov-fYj"/>
+                                </constraints>
+                            </datePicker>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Please Enter you Note" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9UY-0O-1SR">
+                                <rect key="frame" x="5" y="60" width="310" height="90"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="G79-FU-00C"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="G79-FU-00C" firstAttribute="trailing" secondItem="9UY-0O-1SR" secondAttribute="trailing" constant="5" id="7kq-8r-qA0"/>
+                            <constraint firstItem="twD-of-hQT" firstAttribute="centerX" secondItem="9Af-Ga-2IB" secondAttribute="centerX" id="DQL-4g-btJ"/>
+                            <constraint firstItem="z4A-yx-lxH" firstAttribute="leading" secondItem="G79-FU-00C" secondAttribute="leading" constant="20" id="GNl-qW-FqH"/>
+                            <constraint firstItem="G79-FU-00C" firstAttribute="bottom" secondItem="z4A-yx-lxH" secondAttribute="bottom" constant="10" id="Gjn-qk-6vN"/>
+                            <constraint firstItem="jNd-QP-mIV" firstAttribute="top" secondItem="G79-FU-00C" secondAttribute="top" constant="5" id="ZXd-FE-nDK"/>
+                            <constraint firstItem="9UY-0O-1SR" firstAttribute="top" secondItem="jNd-QP-mIV" secondAttribute="bottom" constant="5" id="aLW-e3-tmh"/>
+                            <constraint firstItem="G79-FU-00C" firstAttribute="trailing" secondItem="z4A-yx-lxH" secondAttribute="trailing" constant="20" id="daO-2r-fNp"/>
+                            <constraint firstItem="twD-of-hQT" firstAttribute="centerY" secondItem="9Af-Ga-2IB" secondAttribute="centerY" id="hSS-pD-kHB"/>
+                            <constraint firstItem="G79-FU-00C" firstAttribute="trailing" secondItem="jNd-QP-mIV" secondAttribute="trailing" constant="5" id="mWw-o9-nHE"/>
+                            <constraint firstItem="9UY-0O-1SR" firstAttribute="height" secondItem="9Af-Ga-2IB" secondAttribute="height" multiplier="0.164234" id="n3Y-1o-b6P"/>
+                            <constraint firstItem="9UY-0O-1SR" firstAttribute="leading" secondItem="G79-FU-00C" secondAttribute="leading" constant="5" id="szq-Ye-ptx"/>
+                            <constraint firstItem="jNd-QP-mIV" firstAttribute="leading" secondItem="G79-FU-00C" secondAttribute="leading" constant="5" id="x9i-BT-dAV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="date_Picker" destination="twD-of-hQT" id="cwD-q1-J96"/>
+                        <outlet property="note_TV" destination="9UY-0O-1SR" id="iWk-hh-qQ5"/>
+                        <outlet property="titel_TF" destination="jNd-QP-mIV" id="wRn-28-K9h"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hep-Bv-Yfp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1976.25" y="82.394366197183103"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8PN-Lh-I4k">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bOa-2M-3Xr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Hnw-vy-sHT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="GV0-ek-5vJ" kind="relationship" relationship="rootViewController" id="OCU-x0-uUF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dd8-Sa-V1k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="172.5" y="83.450704225352112"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="plus" catalog="system" width="128" height="113"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
